Add HttpClient module and Http4s and Sttp implementations

--- a/src/main/scala/gob_api_consumer/docker-compose.yaml
+++ b/src/main/scala/gob_api_consumer/docker-compose.yaml
@@ -4,10 +4,15 @@ networks:
   net:
     driver: bridge
 
+volumes:
+  db-data:
+
 services:
   postgres:
     container_name: datos-gob-postgres
     image: postgres
+    volumes:
+      - db-data:/var/lib/postgresql/data
     networks:
       - net
     ports:
