--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,4 +1,4 @@
-version=2.2.1
+version=2.5.2
 maxColumn = 120
 align = most
 continuationIndent.defnSite = 2
@@ -11,5 +11,7 @@ spaces {
   inImportCurlyBraces = true
 }
 optIn.annotationNewlines = true
+
+trailingCommas = multiple
 
 rewrite.rules = [SortImports, RedundantBraces]
